<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:orientation="vertical">

    <Toolbar
        android:id="@+id/Toolbar2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/backgroud_toobar"
        android:title="@string/voce_esta_a_um_passo_para_a_felicidade"
        android:titleMarginStart="25dp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/Toolbar2"
        android:drawableEnd="@drawable/ic_email"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:backgroundTint="#FFFFFF"
        android:maxLines="1"
        android:padding="15dp"
        android:textSize="18sp"
        android:background="@drawable/background_edittext"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/editTextSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_edittext"
        android:layout_below="@id/editTextEmail"
        android:hint="@string/digite_sua_senha"
        android:backgroundTint="#FFFFFF"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:maxLines="1"
        android:padding="15dp"
        android:textSize="18sp"
        android:autofillHints="password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextConfirmarSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_edittext"
        android:layout_below="@id/editTextSenha"
        android:hint="@string/confirmar_senha"
        android:backgroundTint="#FFFFFF"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:maxLines="1"
        android:padding="15dp"
        android:textSize="18sp"
        android:autofillHints="password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/buttonCriarConta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextConfirmarSenha"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_comecar"
        android:layout_marginStart="37dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="32dp"
        android:text="@string/criar_conta" />

    <TextView
        android:id="@+id/VoltaLogin"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonCriarConta"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="149dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="101dp"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="1"
        android:text="@string/voltar_para_login"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>
